--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>de.tub</groupId>
+    <groupId>ditas</groupId>
     <artifactId>SecureService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-
-
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -19,9 +17,6 @@
     </parent>
     
     <dependencies>
-
-
-
         <dependency>
             <groupId>io.minio</groupId>
             <artifactId>minio</artifactId>
